--- a/singUp.html
+++ b/singUp.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hesap Aç</title>
     <link rel="stylesheet" href="assets/css/signup.css">
+    <script src="assets/js/singUp.js" defer></script>
 </head>
 <body>
-    <img src="logo1.PNG" alt="">
-    <img src="logo2.PNG" alt="">
+    <div class="signUp-container">
+        <div class="singUp-header">
+            <h1>HESify!</h1>
+        </div>
+        <div class="signUp-create-account">
+            <img src="assets/img/logo.jpeg" alt="alışveriş görseli">
+            <div class="signUp-form">
+                <h2>Hesap Oluştur</h2>
+                <p>Bilgilerinizi aşağıya girin</p>
+                <form >
+                    <input type="text" placeholder="Ad">
+                    <input type="text" placeholder="Soyad">
+                    <input type="text" placeholder="Yaş">
+                    <input type="text" placeholder="Cinsiyet">
+                    <input type="text" placeholder="Kullanıcı Adı">
+                    <input type="text" placeholder="e-mail">
+                    <input type="text" placeholder="Şifre">
+                </form>
+                <button class="button">Hesap Oluştur</button>
+                <div class="signUp-text">
+                    <h4>Zaten hesabınız var mı?</h4>
+                    <a href="#">Giriş yap</a> 
+                    <!-- buraya login html linki gelecek -->
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
