added footer columns

--- a/sing-Up.html
+++ b/sing-Up.html
@@ -29,8 +29,7 @@
                 <button class="button">Hesap Oluştur</button>
                 <div class="signUp-text">
                     <h4>Zaten hesabınız var mı?</h4>
-                    <a href="#">Giriş yap</a> 
-                    <!-- buraya login html linki gelecek -->
+                    <a href="login.html">Giriş yap</a> 
                 </div>
             </div>
         </div>
