--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
     <div class="login-header">
       <h1>HESify!</h1>
-      <a href="singUp.html">Sign Up</a>
+      <a href="sing-Up.html">Giriş yap</a>
     </div>
 
     <div class="login-content">
