tasarım değişiklikleri yapıldı

--- a/footer.html
+++ b/footer.html
@@ -38,11 +38,13 @@
             </div>
             <div class="footer-text">
                 <li>Uygulamayı İndir</li>
-                <li>Yalnızca Yeni Kullanıcıya Özel Uygulamayla 3$ Tasarruf Edin</li>
+                <li>Yalnızca Yeni Kullanıcıya Özel <br>Uygulamayla 3$ Tasarruf Edin</li>
                 <div class="footer-app">
                     <li><i class="fa-solid fa-qrcode"></i></li>
-                    <i class="fa-brands fa-google-play"></i>
-                    <i class="fa-brands fa-apple"></i>
+                    <div class="footer-icon">
+                        <i class="fa-brands fa-google-play"></i>
+                        <i class="fa-brands fa-apple"></i>
+                    </div>
                 </div>
             </div>
         </ul>
