--- a/sing-Up.html
+++ b/sing-Up.html
@@ -22,7 +22,7 @@
                     <input type="text" placeholder="Soyad">
                     <input type="text" placeholder="Yaş">
                     <input type="text" placeholder="Cinsiyet">
-                    <input type="text" placeholder="Kullanıcı Adı">
+                    <!-- <input type="text" placeholder="Kullanıcı Adı"> -->
                     <input type="text" placeholder="e-mail">
                     <input type="text" placeholder="Şifre">
                 </form>
