The HTML and CSS parts of the footer section are completed.

--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
                 <li><span>HESify!</span></li>
                 <li>Abone</li>
                 <li>İlk siparişinizde %10 indirim kazanın</li>
-                <li>E-postanızı girin <i class="fa-solid fa-caret-right"></i></li>
+                <li class="e-mail">E-postanızı girin <i class="fa-solid fa-caret-right"></i></li>
             </div>
             <div class="footer-text">
                 <li><span>Destek</span></li>
@@ -23,7 +23,7 @@
                 <li>+88015-88888-9999</li>
             </div>
             <div class="footer-text">
-                <li>Hesap</li>
+                <li><span>Hesap</span></li>
                 <li><a href="#">Hesabım</a></li>
                 <li><a href="login.html">Giriş yap /</a><a href="sing-Up.html"></a>Kayıt ol</li>
                 <li><a href="#">Sepet</a></li>
@@ -37,14 +37,13 @@
                 <li>Bağlantı</li>
             </div>
             <div class="footer-text">
-                <li>Uygulamayı İndir</li>
+                <li><span>Uygulamayı İndir</span></li>
                 <li>Yalnızca Yeni Kullanıcıya Özel <br>Uygulamayla 3$ Tasarruf Edin</li>
                 <div class="footer-app">
-                    <li><i class="fa-solid fa-qrcode"></i></li>
-                    <div class="footer-icon">
-                        <i class="fa-brands fa-google-play"></i>
-                        <i class="fa-brands fa-apple"></i>
-                    </div>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </div>
             </div>
         </ul>
