input values have been received from the user.

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Giriş Yap</title>
   <link rel="stylesheet" href="assets/css/login.css">
+  <script src="assets/js/login.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
       <div class="login-form">
         <h2>HESify'a giriş yap</h2>
         <p>Hızlı Hesaplı HESify'lı</p>
-        <form>
+        <form id="login-input-form">
           <input class="login-email" type="text" placeholder="Email">
           <input class="login-password" type="text" placeholder="Şifre">
         </form>
