login den Hesap Oluştur a yönlendiren link'in adı 'Giriş yap' tan 'Hesap Oluştur' olarak güncellendi

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
     <div class="login-header">
       <h1>HESify!</h1>
-      <a href="sing-Up.html">Giriş yap</a>
+      <a href="sing-Up.html">Hesap Oluştur</a>
     </div>
 
     <div class="login-content">
