--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
     <div class="login-header">
       <h1>HESify!</h1>
-      <a href="sing-Up.html">Hesap Oluştur</a>
+      <a href="sing-up.html">Hesap Oluştur</a>
     </div>
 
     <div class="login-content">
