giriş sayfasına sweet alert eklendi

--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Giriş Yap</title>
   <link rel="stylesheet" href="assets/css/login.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="assets/js/login.js" defer></script>
 </head>
 
@@ -25,8 +26,8 @@
         <h2>HESify'a giriş yap</h2>
         <p>Hızlı Hesaplı HESify'lı</p>
         <form id="login-input-form">
-          <input class="login-email" type="text" placeholder="Email">
-          <input class="login-password" type="text" placeholder="Şifre">
+          <input class="login-email" type="email" placeholder="Email">
+          <input class="login-password" type="password" placeholder="Şifre">
         </form>
         <button class="login-button">Giriş</button>
         <a href="#">Şifremi unuttum</a>
