giriş butonu eski haline getirildi

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
           <input class="login-password" type="password" placeholder="Şifre" required>
           <p id="error-message" class="error">Şifre en az 6 karakter olmalıdır.</p>
         </form>
-        <button class="login-button"></button>
+        <button class="login-button">Giriş</button>
         <a href="#">Şifremi unuttum</a>
       </div>
     </div>
