--- a/index.html
+++ b/index.html
@@ -51,11 +51,6 @@
       <a href="#">Market</a>
     </div>
   </div>
-  <!-- <div class="w3-container">
-    <h2>Slideshow Indicators</h2>
-    <p>An example of using buttons to indicate how many slides there are in the slideshow, and which slide the user is currently viewing.</p>
-  </div> -->
-  
   <div class="w3-content w3-display-container" style="max-width:800px">
     <img class="mySlides" src="assets/img/1.png" style="width:100%">
     <img class="mySlides" src="assets/img/2.png" style="width:100%">
@@ -66,6 +61,31 @@
       <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
       <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
       <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+    </div>
+  </div>
+  <div class="menu">
+    <div class="menu-header">
+      <img src="assets/img/rectangle.png" alt="">
+      <h3>Kategoriler</h3>
+    </div>
+    <div class="menu-icons">
+      <a class="border" href="#">
+        <img  src="assets/img/make-up.png" alt="">
+        <span>Güzellik Ürünleri</span>
+      </a>
+      <a class="border" href="#">
+        <img  src="assets/img/parfume.png" alt="">
+        <span>Parfüm</span>
+      </a>
+      <a class="border" href="#">
+        <img  src="assets/img/furniture.png" alt="">
+        <span>Mobilya</span>
+      </a>
+      <a class="border" href="#">
+        <img  src="assets/img/groceries.png" alt="">
+        <span>Market</span>
+      </a>
+     
     </div>
   </div>
       
