index'e ürünler eklendi

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
     </div>
   </div>
   <div class="menu">
-    <div class="menu-header">
-      <img src="assets/img/rectangle.png" alt="">
-      <h3>Kategoriler</h3>
+    <div class="menu-header-text">
+      <div class="menu-header">
+        <img src="assets/img/rectangle.png" alt="">
+        <h3>Kategoriler</h3>
+      </div>
+      <h4>Kategoriye Göre Gözat</h4>
     </div>
     <div class="menu-icons">
       <a class="border" href="#">
@@ -86,6 +89,16 @@
         <span>Market</span>
       </a>
      
+    </div>
+    <div class="menu-header-text">
+      <div class="menu-header">
+        <img src="assets/img/rectangle.png" alt="">
+        <h3>Bu Ay</h3>
+      </div>
+      <h4>En Çok Satan Ürünler</h4>
+    </div>
+    <div class="products">
+
     </div>
   </div>
       
